--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/carousel": "^7.11.0",
     "@mantine/core": "^7.11.0",
     "@mantine/hooks": "^7.11.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^7.1.0",
@@ -22,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
