--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/carousel": "^7.11.0",
     "@mantine/core": "^7.11.0",
     "@mantine/hooks": "^7.11.0",
+    "@mantine/notifications": "^7.11.2",
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.51.15",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
